# easy-cloud

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: static.yml
docs/: README.md  aws-sdk-capabilities.md  roadmap.md
docs/core/: SUMMARY.md  architecture.md  contributing.md  features.md  getting-started.md  roadmap.md
docs/guides/: billing.md  cloudformation.md  faq.md  s3.md
docs/misc/: aws-sdk-capabilities.md
pages/: index.html  landing.html
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/commands/: billing.rs  cloudformation.rs  dashboard.rs  mod.rs  s3.rs  sts.rs
src/assets/: styles.css
src/components/: FileDestinationPicker.vue  FileSystemBase.vue  ModalDialog.vue  S3FileEditor.vue  ToastNotification.vue
src/router/: index.ts
src/store/: awsAccounts.ts  billing.ts
src/views/: BillingView.vue  CloudFormationView.vue  DashboardView.vue  S3BucketView.vue  S3View.vue
