[package]
name = "easy-cloud"
version = "0.1.0"
description = "Easy Cloud"
authors = ["Andrezz64"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aws-config = { version = "1.9.0", default-features = false, features = ["rustls", "rt-tokio", "behavior-version-latest"] }
aws-sdk-sts = { version = "1.108.0", default-features = false, features = ["rustls"] }
tokio = "1.52.3"
aws-credential-types = "1.3.0"
aws-sdk-s3 = { version = "1.138.0", default-features = false, features = ["rustls"] }
aws-sdk-cloudformation = { version = "1.118.0", default-features = false, features = ["rustls"] }
aws-sdk-costexplorer = { version = "1.90.0", default-features = false, features = ["rustls"] }
base64 = "0.22"
# Force ring as crypto provider to avoid aws-lc-sys (needs NASM on Windows)
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
